restyling robin's slides

--- a/index.html
+++ b/index.html
@@ -370,11 +370,11 @@
                 </section>
 
                 <section class="statement">
-                    <h3>Vulcanize</h3>
                     <p>Inline and package your components</p>
                     <a href="https://github.com/polymer/vulcanize">vulcanize</a>
                     <aside class="notes">
                         <ul>
+                        <li>From google</li>
                         <li>Made redundant by HTTP2</li>
                         </ul>
                     </aside>
@@ -394,39 +394,23 @@
                     </ul>
                 </section> 
 
-                <section>
-                    <h3>Other tools</h3>
-                    <ul>
-                        <li>CLI</li>
-                        <li>JS</li>
-                        <li>Task runners
-                            <ul>
-                                <li><a href="https://www.npmjs.com/package/grunt-vulcanize">Grunt</a></li>
-                                <li><a href="https://www.npmjs.com/package/gulp-vulcanize">Gulp</a></li>
-                                <li><a href="https://www.npmjs.com/package/broccoli-vulcanize">Broccoli</a></li>
-                            </ul>
-                    </ul>
-                </section> 
-
-                <section>
+                <section data-background="#e80042">
                     <h3>Bundles</h3>
-                    <p>Collection of components wrapped together</p>
                      <img height="300" src="/images/production-ify/global.png">
+                    <p>Collection of components wrapped together</p>
                     <aside class="notes">
                         <ul>
                             <li>Global loaded on all pages</li>
-                            <li>Page loaded on specific pages</li>
                         </ul>
                     </aside>                    
                 </section>
 
-                <section>
+                <section  data-background="#e80042">
                     <h3>Pages</h3>
+                    <img height="180" src="/images/production-ify/product-page.png">
                     <p>Collection of components and bundles for a specfic page</p>
-                    <img height="200" src="/images/production-ify/product-page.png">
                     <aside class="notes">
                         <ul>
-                            <li>Global loaded on all pages</li>
                             <li>Page loaded on specific pages</li>
                         </ul>
                     </aside>                    
@@ -443,7 +427,7 @@
                 </section> 
 
                 <section>
-                    <h3>Some other tools</h3>
+                    <h3>Other production tools</h3>
                     <ul>
                     <li><a href="https://github.com/Polymer/hydrolysis">hydrolysis</a></li>
                     <li><a href="https://github.com/PolymerLabs/crisper">crisper</a></li>
@@ -465,7 +449,7 @@
                     <h1>Structured Data</h1>                                          
                 </section>
 
-                <section>
+                <section data-background="#e80042">
                     <img src="http://cdn.jsdelivr.net/emojione/assets/png/1F60E.png?v=1.2.4">
                     <img src="http://cdn.jsdelivr.net/emojione/assets/png/1F615.png?v=1.2.4">
                     <img src="http://cdn.jsdelivr.net/emojione/assets/png/1F62A.png?v=1.2.4">
@@ -480,8 +464,17 @@
                     </aside>                    
                 </section>
 
-                <section>
+                <section data-background="#e80042">
                     <img src="http://cdn.jsdelivr.net/emojione/assets/png/1F60E.png?v=1.2.4">
+                    <aside class="notes">
+                        <ul>
+                            <li>polymer perfect for components, do once, everyone gets it</li>
+                            <li>Hopefully Taylor won't mind this</li>
+                        </ul>
+                    </aside>
+                </section>
+
+                <section>
                     <video controls>
                       <source src="/videos/structured-data/polymer-summit.mp4" type="video/mp4">
                     </video>
@@ -494,8 +487,8 @@
                 </section>
 
 
-                <section>
-                    <img height="800" src="/images/components-demo/product-shadow-dom.png">
+                <section data-background="#eeeeee">
+                    <img height="600" src="/images/components-demo/product-shadow-dom.png">
                     <aside class="notes">
                         <ul>
                             <li>All that is in shadow dom, or in this case, shadydom as polyfiled</li>
@@ -505,8 +498,11 @@
                     </aside>                      
                 </section>
 
-                <section>
-                    <img src="http://cdn.jsdelivr.net/emojione/assets/png/1F615.png?v=1.2.4">
+                <section data-background="#e80042">
+                   <img src="http://cdn.jsdelivr.net/emojione/assets/png/1F615.png?v=1.2.4">
+                </section>
+
+                <section data-background="#eeeeee">
                     <img height="439" src="/images/structured-data/structured-data-url-592505.png">
                     <aside class="notes">
                         <ul>
@@ -516,8 +512,7 @@
                     </aside>                      
                 </section>
 
-                <section>
-                    <img src="http://cdn.jsdelivr.net/emojione/assets/png/1F615.png?v=1.2.4">
+                <section data-background="#eeeeee">
                     <img height="439" src="/images/structured-data/structured-data-body-592505.png">
                     <aside class="notes">
                         <ul>
@@ -529,6 +524,9 @@
 
                 <section>
                     <h1>Why?</h1>
+                </section>
+
+                <section data-background="#e80042">
                     <img src="http://cdn.jsdelivr.net/emojione/assets/png/1F62A.png?v=1.2.4">
                     <aside class="notes">
                         <ul>
@@ -542,6 +540,9 @@
 
                 <section>
                     <h1>Call in the big guns</h1>
+                </section>
+
+                <section data-background="#e80042">
                     <img src="http://cdn.jsdelivr.net/emojione/assets/png/1F60C.png?v=1.2.4">
                     <br>
                     <img height="150" src="/images/structured-data/email.png">
@@ -553,10 +554,12 @@
                     </aside>                                                                 
                 </section>
 
-                <section>
+                <section data-background="#e80042">
                     <img src="http://cdn.jsdelivr.net/emojione/assets/png/1F600.png?v=1.2.4">
-                    <br>
-                    <img height="150" src="/images/structured-data/graph.png">
+                </section>
+
+                <section data-background="#eeeeee">
+                    <img height="240" src="/images/structured-data/graph.png">
                     <aside class="notes">
                         <ul>
                             <li>Errors started to drop</li>
@@ -565,11 +568,11 @@
                     </aside>                                                                 
                 </section>
 
-                <section>
+                <section data-background="#e80042">
                     <img src="http://cdn.jsdelivr.net/emojione/assets/png/1F4A1.png?v=1.2.4">                                                               
                 </section>
 
-                <section>
+                <section data-background="#eeeeee">
                     <img height="450" src="/images/structured-data/xhr-structured-data-body-592505.png">
                     <aside class="notes">
                         <ul>
@@ -581,18 +584,21 @@
                     </aside>                                                                           
                 </section>
 
-                <section>
+                <section data-background="#eeeeee">
                     <img height="350" src="/images/structured-data/postman-check.png">
                     <aside class="notes">
                         <ul>
                             <li>Nice</li>
                             <li>what can we use this for?</li>
                         </ul>
-                    </aside>                                                                           
+                    </aside>  
                 </section>
 
                 <section>
-                    <h1>Hacking funtional tests</h1>
+                    <h1>Hacking functional tests</h1>
+                </section>
+
+                <section data-background="#eeeeee">
                     <pre style="margin: 0; width: 100%;"><code class="java" data-trim>
                     code here
                     </code></pre>                    
@@ -600,7 +606,7 @@
                         <ul>
                             <li>SEO functional tests!</li>
                         </ul>
-                    </aside>                                                                           
+                    </aside>  
                 </section>
 
                 <!-- Monitoring -->
@@ -616,28 +622,40 @@
                 <!-- What's next -->
                 <section>
                     <h1>Coming Soon...</h1>
-					- Polyfill - conditional
-					- Perf testing
-					- Polyserve
-					- Seed-elements for starting - move to versioning each element - don’t bundle in the bower module.
-					- Skeleton CSS / Unresolved styles
+                </section>
+
+                <section>
+                    - Polyfill - conditional
+                    - Perf testing
+                    - Polyserve
+                    - Seed-elements for starting - move to versioning each element - don’t bundle in the bower module.
+                    - Skeleton CSS / Unresolved styles                
                 </section>
 
                 <!-- Resources -->
                 <section>
                     <h1>Resources</h1>
+                </section>
+
+                <section>
                     <ul>
                     <li><a href="https://www.polymer-project.org/1.0/docs/devguide/feature-overview.html">Polymer docs</a></li>
                     <li><a href="https://elements.polymer-project.org/">Elements catalog</a></li>
                     <li><a href="https://polymer.slack.com/">Slack</a></li>
 					<li><a href="https://www.youtube.com/watch?v=m1hFhDYDY6o&list=PLOU2XLYxmsII5c3Mgw6fNYCzaWrsM3sMN">Polycasts YouTube</a></li>
-					<li>Twitter
+					<li>
+                </section>
+
+                <section>
+                    <h3>Twitter</h3>
                     <ul>
                         <li><a href="https://twitter.com/polymer">@polymer</a></li>
                         <li><a href="https://twitter.com/ebidel">@ebidel</a></li>
                         <li><a href="https://twitter.com/rob_dodson">@rob_dodson</a></li>
                         <li><a href="https://twitter.com/TaylorTheSavage">@TaylorTheSavage</a></li>
                     </ul>
+                <section>
+                    
                 </section>
 
                 <!-- Shall we show it? -->
