updates to David's script

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                     <div>
                         <img src="/images/furniture/net-a-porter.svg" width="70%">
                     </div>
+                    <aside class="notes">
+                        <ul>
+                            <li>So we're going to start by covering the 2 points which acted as the precursor for us as a team and our use of polymer to deliver projects.</li>
+                            <li>Hopefully this way you’ll get a sense of the environment we built as well as the technical approach.</li>
+                        </ul>
+                    </aside>
                 </section>
 
                 <!-- MATT END -->
@@ -76,12 +82,42 @@
 
                 <!-- Collaboration -->
                 <section>
-                    <h1>1. the power of collaboration</h1>
+                    <h1>1. collaboration</h1>
+                    <aside class="notes">
+                        <ul>
+                            <li>A couple of years ago Net-A-Porter made its move to form cross-compentency teams.</li>
+                            <li>Teams made of design / product owner / engineers and testers. Creating small, focused product teams.</li>
+                        </ul>
+                    </aside>
                 </section>
 
-                <!-- Insight -->
+
+                <!-- Empathy -->
                 <section>
-                    <h1>2. insight</h1>
+                    <h1>empathy</h1>
+                    <aside class="notes">
+                        <ul>
+                            <li>There’s a lot of writings about the benefits of multi functional teams, and this isn’t anything new so we won’t go on about it.</li>
+                            <li> But the key for us as a team was this new ability to listen and learn - making us able to pivot and accelerate through change.</li>
+                            <li>Maturing our inter team processes over time has gave us the platform to;</li>
+                            <li>Constant conversation through to live</li>
+                            <li>Remove any Hand-offs and bring development forwards into design - making smarter decisions</li>
+                            <li>Remove any Hand-offs and bring development forwards into design - making smarter decisions</li>
+                            <li>Understand the pain points</li>
+                            <li>Move forwards together</li>
+                        </ul>
+                    </aside>
+                </section>
+
+                <!-- Challenge -->
+                <section>
+                    <h1>challenge</h1>
+                    <aside class="notes">
+                        <ul>
+                            <li>As a team our thinking became more matured and as such the team led by the designers started to challenge the design approach used at NAP.</li>
+                            <li> What was once a process driven by showcasing full formed pages designs at the end of two week sprints - seemed increasingly outdated, and began to derail our agility.</li>
+                        </ul>
+                    </aside>
                 </section>
 
                 <!-- Influencers -->
@@ -89,13 +125,18 @@
                     <div class="mugshot">
                         <img src="/images/insight/jeremy.png">
                         <h3>Jermery Keith</h3>
-                        <a class="handle" href="https://twitter.com/adactio">@mdactio</a>
+                        <a class="handle" href="https://twitter.com/adactio">@adactio</a>
                     </div>
                     <div class="mugshot">
                         <img src="/images/insight/samantha.jpeg">
                         <h3>Samantha Warren</h3>
                         <a class="handle" href="https://twitter.com/samanthatoy">@samanthatoy</a>
                     </div>
+                    <aside class="notes">
+                        <ul>
+                            <li>A talk by Jeremy Keith from Clearleft followed by one by Samantha Warren when she was at Twitter, accelerated our conceptual thinking and experience approach. and brought us to idea of Styletil.es showcasing elements in granularity</li>
+                        </ul>
+                    </aside>
                 </section>
 
                 <!-- Atomic Design -->
@@ -103,18 +144,56 @@
                     <div>
                         <img src="/images/insight/atomic-ui-01.jpg" >
                     </div>
+                    <aside class="notes">
+                        <ul>
+                            <li>We developed that into a concept that would work with our company, showcasing early with granular elements and working against design hypothesis created in collaboration with our stakeholders Phraseology coined by Brad Frost - 'Atomic design', rapidly changed the lexicon around design at NAP.</li>
+                        </ul>
+                    </aside>
+                </section>
+
+                <!-- Learn -->
+                <section>
+                    <h1>learn</h1>
+                    <aside class="notes">
+                        <ul>
+                            <li>As with any change there are also pitfalls and one of those was to try to implement a working component library on an ageing web app.</li>
+                            <li>Primarily because there was huge maintain overheads, poor communication and high time investment to implement styles across the whole app.</li>
+                        </ul>
+                    </aside>
+                </section>
+
+                <!-- Review -->
+                <section>
+                    <h1>review</h1>
+                    <aside class="notes">
+                        <ul>
+                            <li>But with every time we fail it give us a time to be retrospective. And this was no different - the result was we open conversations about connecting strategies design and development.</li>
+                            <li>This is really a critical understanding - design and technology strategy can’t succeed without the other.</li>
+                            <li>We had to identity an opportunity to collaborate and deliver working components libraries at the same time.</li>
+                        </ul>
+                    </aside>
                 </section>
 
                 <!-- Identify the opportunity -->
                 <section>
-                    <h1>opportunity</h1>
+                    <h1>2. opportunity</h1>
+                    <aside class="notes">
+                        <ul>
+                            <li>Our opportunity to deliver came when a piece of internal research highlighted a potential missed opportunity. Driven by the conscious realisation that our key competitors were beginning to deliver faster, scalable sites</li>
+                        </ul>
+                    </aside>
                 </section>
 
                 <!-- Fixed Width site -->
-                <section data-background="#e80042" data-background-transition="none">
+                <section data-background="#e80042">
                     <div>
                         <img src="/images/opportunity/condensed-container-01.jpg" >
                     </div>
+                    <aside class="notes">
+                        <ul>
+                            <li>We had a fixed container width at 950px and a separate mobile UI and rarely releasing features across both.</li>
+                        </ul>
+                    </aside>
                 </section>
 
                 <!-- Browser Width -->
@@ -122,12 +201,30 @@
                     <div>
                         <img src="/images/opportunity/condensed-container-02.jpg" >
                     </div>
+                    <aside class="notes">
+                        <ul>
+                            <li>Through data we saw that our consistently most profitable browser width was 1300-1400. This Paralleled with the trending change in traffic entry points from our visitors, and big growth in the APAC region from mobile devices.</li>
+                        </ul>
+                    </aside>
                 </section>
 
-                <!-- Product Page -->
+                <!-- The Question -->
                 <section>
-                    <h1>product page</h1>
+                    <h1>question</h1>
+                    <aside class="notes">
+                        <ul>
+                            <li>So the questions asked of us was “how can we create a proposition that recaptures the market, without alienating our core customer base during the process?"</li>
+                            <li>We won’t go through all of the steps between this question being asked of us and the beginning of the development. But a couple of crucial decisions were made in the interim</li>
+                            <li>This had to be an iterative release</li>
+                            <li>We needed to split away from our current web app</li>
+                            <li>we needed to showcase early to our stakeholders</li>
+                            <li>we needed to showcase early to our stakeholders</li>
+                            <li>We started our responsive journey with our global header and footer - deciding to create a responsive site framework first before focusing on our content pages.</li>
+                        </ul>
+                    </aside>
                 </section>
+
+                <!-- DAVID END -->
 
                 <!-- Pivot -->
                 <section>
@@ -155,7 +252,7 @@
 
                 <!-- Browser Support -->
                 <section>
-                    <h1>Risk vs Reward</h1>
+                    <h1>risk vs reward</h1>
                     <aside class="notes">
                     	<ul>
 	                    	<li>W3 Standard - soon no Polyfill needed</li>
@@ -168,7 +265,7 @@
 
                 <!-- Our Components -->
                 <section>
-                    <h1>Components</h1>
+                    <h1>components</h1>
                 </section>
 
 				<!-- NAP Product Price -->
@@ -361,12 +458,12 @@
 
                 <!-- Testing -->
                 <section>
-                    <h1>Testing</h1>
+                    <h1>testing</h1>
                 </section>
 
                 <!-- Build -->
                 <section>
-                    <h1>Production-ify</h1>
+                    <h1>production-ify</h1>
                 </section>
 
                 <section class="statement">
@@ -385,12 +482,16 @@
                     <ul>
                         <li>CLI</li>
                         <li>JS</li>
-                        <li>Task runners
-                            <ul>
-                                <li><a href="https://www.npmjs.com/package/grunt-vulcanize">Grunt</a></li>
-                                <li><a href="https://www.npmjs.com/package/gulp-vulcanize">Gulp</a></li>
-                                <li><a href="https://www.npmjs.com/package/broccoli-vulcanize">Broccoli</a></li>
-                            </ul>
+                        <li>Task runners</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h3>task runners</h3>
+                    <ul>
+                        <li><a href="https://www.npmjs.com/package/grunt-vulcanize">Grunt</a></li>
+                        <li><a href="https://www.npmjs.com/package/gulp-vulcanize">Gulp</a></li>
+                        <li><a href="https://www.npmjs.com/package/broccoli-vulcanize">Broccoli</a></li>
                     </ul>
                 </section> 
 
@@ -406,7 +507,7 @@
                 </section>
 
                 <section  data-background="#e80042">
-                    <h3>Pages</h3>
+                    <h3>pages</h3>
                     <img height="180" src="/images/production-ify/product-page.png">
                     <p>Collection of components and bundles for a specfic page</p>
                     <aside class="notes">
@@ -427,7 +528,7 @@
                 </section> 
 
                 <section>
-                    <h3>Other production tools</h3>
+                    <h3>other production tools</h3>
                     <ul>
                     <li><a href="https://github.com/Polymer/hydrolysis">hydrolysis</a></li>
                     <li><a href="https://github.com/PolymerLabs/crisper">crisper</a></li>
@@ -446,7 +547,7 @@
 
                 <!-- Structured Data -->
                 <section>
-                    <h1>Structured Data</h1>                                          
+                    <h1>structured data</h1>                                          
                 </section>
 
                 <section data-background="#e80042">
@@ -523,7 +624,7 @@
                 </section>
 
                 <section>
-                    <h1>Why?</h1>
+                    <h1>why?</h1>
                 </section>
 
                 <section data-background="#e80042">
@@ -539,7 +640,7 @@
                 </section>
 
                 <section>
-                    <h1>Call in the big guns</h1>
+                    <h1>call in the big guns</h1>
                 </section>
 
                 <section data-background="#e80042">
@@ -595,7 +696,7 @@
                 </section>
 
                 <section>
-                    <h1>Hacking functional tests</h1>
+                    <h1>hacking functional tests</h1>
                 </section>
 
                 <section data-background="#eeeeee">
@@ -611,17 +712,17 @@
 
                 <!-- Monitoring -->
                 <section>
-                    <h1>Does it work?</h1>
+                    <h1>does it work?</h1>
                 </section>
 
                 <!-- Gotchas -->
                 <section>
-                    <h1>Gotchas</h1>
+                    <h1>gotchas</h1>
                 </section>
 
                 <!-- What's next -->
                 <section>
-                    <h1>Coming Soon...</h1>
+                    <h1>coming soon...</h1>
                 </section>
 
                 <section>
@@ -634,7 +735,7 @@
 
                 <!-- Resources -->
                 <section>
-                    <h1>Resources</h1>
+                    <h1>resources</h1>
                 </section>
 
                 <section>
@@ -649,18 +750,17 @@
                 <section>
                     <h3>Twitter</h3>
                     <ul>
-                        <li><a href="https://twitter.com/polymer">@polymer</a></li>
-                        <li><a href="https://twitter.com/ebidel">@ebidel</a></li>
-                        <li><a href="https://twitter.com/rob_dodson">@rob_dodson</a></li>
-                        <li><a href="https://twitter.com/TaylorTheSavage">@TaylorTheSavage</a></li>
+                    <li><a href="https://twitter.com/polymer">@polymer</a></li>
+                    <li><a href="https://twitter.com/ebidel">@ebidel</a></li>
+                    <li><a href="https://twitter.com/rob_dodson">@rob_dodson</a></li>
+                    <li><a href="https://twitter.com/TaylorTheSavage">@TaylorTheSavage</a></li>
                     </ul>
-                <section>
-                    
-                </section>
+                </section> 
+
 
                 <!-- Shall we show it? -->
                 <section>
-                    <h1>The page!</h1>
+                    <h1>let's see it</h1>
                 </section>
 
 				<!-- Example of nested vertical slides -->
